# fastAPI_backend_in_progress

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt  security.py  utils.py
app/: crud.py  database.py  dependencies.py  main.py  models.py  schemas.py
app/internal/: admins.py
app/models/: __init__.py  admin.py  mail.py  meal.py  user.py
app/routers/: meals.py  users.py
app/schemas/: __init__.py  admin.py  mail.py  meal.py  user.py
together_go/: README.md  pubspec.yaml
together_go/android/app/: build.gradle
together_go/ios/Runner/: Info.plist
together_go/ios/Runner.xcodeproj/: project.pbxproj
together_go/lib/: index.dart  main.dart
together_go/lib/backend/api_requests/: api_calls.dart
together_go/lib/components/: calendar_departure_model.dart  calendar_departure_widget.dart  calendar_return_model.dart  calendar_return_widget.dart  return_date_model.dart  return_date_widget.dart
together_go/lib/flutter_flow/: flutter_flow_theme.dart
together_go/lib/flutter_flow/nav/: nav.dart
together_go/lib/pages/home_page/: home_page_model.dart  home_page_widget.dart
together_go/lib/pages/how_to_go/: how_to_go_model.dart  how_to_go_widget.dart
together_go/lib/pages/payment/: payment_model.dart  payment_widget.dart
together_go/lib/pages/seats_selection/: seats_selection_model.dart  seats_selection_widget.dart
together_go/lib/pages/your_trips/: your_trips_model.dart  your_trips_widget.dart
together_go/lib/user/forgot_password/: forgot_password_model.dart  (+1 more)
together_go/test/: widget_test.dart
together_go/web/: index.html
(+12 files in other folders)
