[tool.poetry]
name = "bodaoitbackend"
version = "0.1.0"
description = ""
authors = ["euhean"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "2.0.29"
fastapi = "0.111.0"
pydantic = "2.7.1"
python-dotenv = "1.0.1"
PyJWT = "2.8.0"
bcrypt = "4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
